--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -14,10 +14,12 @@
   <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/leaflet.awesome-markers.css" type="text/css" />
   <link rel="stylesheet" href="http://www.nbmap.gov.cn/leaflet/leaflet.css">
 
 
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
 
 
 
@@ -80,6 +82,7 @@
   <script  src="js/controllers/bootstrap-datetimepicker.js"></script>
   <script  src="js/controllers/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="http://www.nbmap.gov.cn/leaflet/leaflet.js"></script>
+  <script  src="js/controllers/leaflet.awesome-markers.js"></script>
   <!--<script  src="js/controllers/leaflet-tilelayer-wmts.js"></script>
   <script  src="js/controllers/leaflet-tilelayer-wmts-src.js"></script>-->
   <!--<script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.wmts-src.js"></script>
