高速公路流量观测

--- a/beauty-project2/tra/src/main/webapp/tpl/tra/highway.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/highway.html
@@ -1,13 +1,13 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm">
     <div class="wrapper-md" ng-controller="HighwayCtrl">
         <div class="row">
-            <div class="col-lg-6" >
-                <div style="border: 1px gray dashed;height:280px;line-height: 280px;" class="text-center active">
+            <div class="col-lg-6" ui-sref="app.gsglll">
+                <div style="border: 1px gray dashed;height:280px;line-height: 280px;cursor: pointer;" class="text-center active">
                     <h2 style="line-height: 240px;">高速公路流量观测</h2>
                 </div>
             </div>
             <div class="col-lg-6" ui-sref="app.highway_project_management" >
-                <div style="border: 1px gray dashed;height:280px;line-height: 280px;" class="text-center active">
+                <div style="border: 1px gray dashed;height:280px;line-height: 280px;cursor: pointer;" class="text-center active">
                     <h2 style="line-height: 240px;">市公路工程项目管理</h2>
                 </div>
             </div>
