路线信息与清除marker标记

--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -84,8 +84,8 @@
   <script src="http://www.nbmap.gov.cn/leaflet/leaflet.js"></script>
   <script  src="js/controllers/leaflet.awesome-markers.js"></script>
   <!--<script  src="js/controllers/leaflet-tilelayer-wmts.js"></script>
-  <script  src="js/controllers/leaflet-tilelayer-wmts-src.js"></script>-->
-  <!--<script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.wmts-src.js"></script>
+  <script  src="js/controllers/leaflet-tilelayer-wmts-src.js"></script>
+  <script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.wmts-src.js"></script>
   <script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.tdt-src.js"></script>-->
   <!-- Lazy loading -->
 </body>
