--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.html
@@ -43,7 +43,7 @@
           </li>
           <li class="divider"></li>
           <li>
-            <a ui-sref="access.signin">Logout</a>
+            <a ng-click="loginOut()">Logout</a>
           </li>
         </ul>
         <!-- / dropdown -->
