--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -99,7 +99,7 @@
         </li>
         <li class="divider"></li>
         <li>
-          <a ui-sref="access.signin">Logout</a>
+          <a ng-click="loginOut()">Logout</a>
         </li>
       </ul>
       <!-- / dropdown -->
